spacelab: fixed navbar-inverse collapsed link color

--- a/spacelab/bootstrap.css
+++ b/spacelab/bootstrap.css
@@ -6280,7 +6280,7 @@ a.badge:focus {
     border-bottom: none;
   }
   .navbar-inverse .nav-collapse .nav li > a {
-    color: #eeeeee;
+    color: #cccccc !important;
   }
   .navbar-inverse .nav-collapse .nav li > a:hover {
     background-color: #0099dd !important;
