--- a/spacelab/bootswatch.less
+++ b/spacelab/bootswatch.less
@@ -106,7 +106,7 @@
 	.navbar-inverse .nav-collapse {
 
 		.nav li > a {
-			color: @grayLighter;
+			color: @grayLight !important;
 
 			&:hover {
 				background-color: @linkColor !important;
